--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=pgsadmin;Password=admin123;Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+  }
 }
