--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -3,6 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=downtown-app.db",
+      "PostgreSQLConnection": "User ID=pgsadmin;Password=admin123;Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
     }
   }
 }
