--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=pgsadmin;Password=admin123;Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+    "DefaultConnection": "Data Source=downtown-app.db",
+    "PostgreSQLConnection": "User ID=pgsadmin;Password=admin123;Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
   }
 }
