--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 *.db-shm
 *.db-wal
 
+appsettings.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -477,3 +479,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+/Api/appsettings.json
