--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     },
     "ConnectionStrings": {
       "DefaultConnection": "Data Source=downtown-app.db",
-      "PostgreSQLConnection": "User ID=pgsadmin;Password=admin123;Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+      "PostgreSQLConnection": "User ID=pgsadmin;Password=admin123);Host=localhost;Port=5432;Database=downtown-db;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
     }
   }
 }
