polishing code, finitions for the auth\auto, domain events and handlers, added interface for data context.

--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -7,7 +7,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
