--- a/.github/workflows/build_application.yml
+++ b/.github/workflows/build_application.yml
@@ -5,28 +5,31 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    paths:
+        - '**.cs'
+        - '**.csproj'
+
+env:
+    DOTNET_VERSION: '6.0.x'
 
 jobs:
   build:
   
+    name: build-${{matrix.os}}
+    runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        version: [6.0.x]
-
-    runs-on: ubuntu-latest
+        matrix:
+            os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
+    - name: Setup .NET 6.0
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: ${{ matrix.version }}
+        dotnet-version: ${{ env.DOTNET_VERSION }}
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build --configuration Release --no-restore
