--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handlers\Chats\Commands\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
