--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
