--- a/client-app/package.json
+++ b/client-app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
@@ -24,6 +25,7 @@
     "mobx-react-lite": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
