--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.9",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.2",
+    "mobx-state-tree": "^5.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
