--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.32.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
@@ -32,7 +33,8 @@
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
