--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Handlers\Bars\Queries\" />
     <Folder Include="Handlers\Chats\Commands\" />
   </ItemGroup>
 
