modified the configuration of our React App your signature purposes. Added Key.

--- a/client-app/.gitignore
+++ b/client-app/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# https://flaviocopes.com/react-how-to-configure-https-localhost/ IMPORTANT!!!!
+
 # dependencies
 /node_modules
 /.pnp
