Profile Photos functionnality. We're able to add new photos from file, crop and preview before uploading. We can also set main photo from our personal photos and delete permanently photos as well.

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -26,7 +26,9 @@
     "mobx-react-lite": "^3.4.2",
     "mobx-state-tree": "^5.1.7",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
