--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "gsap": "^3.11.5",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.2",
     "mobx-state-tree": "^5.1.7",
