frontend for the followers/following features. Most functionnalities are there, but the styling needs some love.

--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Ardalis.GuardClauses" Version="4.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.13" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
+    <PackageReference Include="System.Data.Odbc" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
