--- a/client-app/package.json
+++ b/client-app/package.json
@@ -32,7 +32,7 @@
     "react-hot-toast": "^2.4.0",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
