--- a/.github/workflows/downtown_unit_testing.yml
+++ b/.github/workflows/downtown_unit_testing.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -22,6 +22,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build DowntownApp.sln --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
