--- a/client-app/package.json
+++ b/client-app/package.json
@@ -32,7 +32,6 @@
     "react-hot-toast": "^2.4.0",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "^5.0.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
@@ -40,10 +39,11 @@
     "yup": "^1.0.2"
   },
   "scripts": {
-    "start": "set SSL_CRT_FILE=cert.pem&&set SSL_KEY_FILE=key.pem&&react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set SSL_CRT_FILE=cert.pem&&set SSL_KEY_FILE=key.pem&&vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +65,11 @@
   },
   "devDependencies": {
     "@types/react-infinite-scroller": "^1.2.3",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "vite": "^4.5.0"
   }
 }
