--- a/client-app/package.json
+++ b/client-app/package.json
@@ -41,7 +41,7 @@
     "yup": "^1.0.2"
   },
   "scripts": {
-    "start": "set SSL_CRT_FILE=cert.pem&&set SSL_KEY_FILE=key.pem&&vite",
+    "start": "set SSL_CRT_FILE=cert.pem&&set SSL_KEY_FILE=key.pem&vite",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
