Adding Cancel and Schedule, not tested yet

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <Folder Include="Handlers\Bars\Queries\" />
     <Folder Include="Handlers\Chats\Commands\" />
+    <Folder Include="Handlers\ScheduledEvent\Commands\" />
+    <Folder Include="Handlers\ScheduledEvent\Queries\" />
   </ItemGroup>
 
   <PropertyGroup>
