--- a/Tests/ApplicationTests/ApplicationTests.csproj
+++ b/Tests/ApplicationTests/ApplicationTests.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Api\Api.csproj" />
     <ProjectReference Include="..\..\Application\Application.csproj" />
     <ProjectReference Include="..\..\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\Persistence\Persistence.csproj" />
