--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="Handlers\ScheduledEvent\**" />
+    <EmbeddedResource Remove="Handlers\ScheduledEvent\**" />
+    <None Remove="Handlers\ScheduledEvent\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
@@ -15,8 +21,6 @@
   <ItemGroup>
     <Folder Include="Handlers\Bars\Queries\" />
     <Folder Include="Handlers\Chats\Commands\" />
-    <Folder Include="Handlers\ScheduledEvent\Commands\" />
-    <Folder Include="Handlers\ScheduledEvent\Queries\" />
   </ItemGroup>
 
   <PropertyGroup>
