--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for downtown-app on 2023-10-22T21:44:13-04:00
+# fly.toml app configuration file generated for downtown-app on 2023-12-06T20:15:23-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,11 +10,11 @@ primary_region = "yul"
   image = "meatyharvey/downtown-app-prod:latest"
 
 [env]
-  ASPNETCORE_URLS="http://+:8080"
-  Accounts__Auth0__Authority="https://downtown-app.us.auth0.com/"
-  Accounts__Auth0__Audience="https://downtownapp/api"
-  Cloudinary__Cloudname="dwixnc66t"
-  Cloudinary__ApiKey="277262858688816"
+  ASPNETCORE_URLS = "http://+:8080"
+  Accounts__Auth0__Audience = "https://downtownapp/api"
+  Accounts__Auth0__Authority = "https://downtown-app.us.auth0.com/"
+  Cloudinary__ApiKey = "277262858688816"
+  Cloudinary__Cloudname = "dwixnc66t"
 
 [http_service]
   internal_port = 8080
@@ -23,3 +23,8 @@ primary_region = "yul"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
