Implementing invite contributor

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^5.0.8",
+    "@livekit/components-react": "^1.4.2",
+    "@livekit/components-styles": "^1.0.7",
     "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.121",
@@ -34,6 +36,7 @@
     "axios": "^1.6.0",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "livekit-client": "^1.15.3",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^4.0.5",
     "mobx-state-tree": "^5.1.7",
